@@ -1,26 +1,20 @@
 {
   "none": "None",
-  "hideMolecules": "Hide molecules",
   "balanced": "balanced",
   "introduction": "Introduction",
-  "moleculesAreHidden": "molecules are hidden",
   "separateWater": "Separate Water",
   "balancingGame": "Balancing Game",
   "hideWhy": "Hide Why",
   "showAnswer": "Show Answer",
-  "equation0of1": "Equation {0} of {1}:",
   "tryAgain": "Try Again",
   "notBalanced": "not balanced",
   "balancing-chemical-equations.name": "Balancing Chemical Equations",
   "combustMethane": "Combust Methane",
   "next": "Next",
-  "balanceScales": "Balance Scales",
   "check": "Check",
-  "barCharts": "Bar Charts",
   "makeAmmonia": "Make Ammonia",
   "showWhy": "Show Why",
   "notSimplified": "not simplified",
-
   "tools": "Tools:",
   "reactants": "Reactants",
   "products": "Products",
