@@ -1,3 +1,4 @@
+6/17/14 remove unused strings from balancing-chemical-equations_en.strings
 # 1.0.0-dev.2 6/16/14
 6/16/14 #17 use default "Start Over" for button label on scoreboard
 # 1.0.0-dev.1 6/16/14
